  by Thomas Jagger).

2015-01-21:
- Updating Citation information per CRAN request.

2015-06-28:
- Updating maintainer email address

2016-12-12:
- Fixing a couple of errors in CLM tutorial vignette
- Correcting description of threshold argument to clmm
- qgumbel did not respect it's lower.tail argument (thanks to John Fox for 
  reporting)
- Test for no. random effects less than the no. observations now gives a warning
  instead of an error and is now manageable via clmm.control.
  
2018-04-19:
- Fixed insufficient protect in get_fitted
- Registration of native routines (C-code)
- Reduce exec time for clmm examples
- change rBind -> rbind

2018-08-25:
- Added sign.location and sign.nominal to clm.control()
- Implemented type I, II and III type ANODE tables for clm fits
- Implemented flexible link functions for clm()s
- Added new article submitted to JSS as vignette and moved old vignettes to 
  GitHub

2019-03-09:
- Massage tests to check out on R-devel

2019-04-25:
- Change in formula evaluation in base R prompts this update - very kindly 
  fixed by Martin Maechler (R core) in PR#18 

2019-12-11:
- Get rid of S3 class checks with class() - now using inherits() instead.

2020-08-22:
- Fix evaluation of long formulae in clmm - thanks to Stéphane Guillou, 
  Stefan Th. Gries and Tingting Zhan for reporting.
  
2022-11-13:
- Fix function declaration without a prototype in utilityFuns.c per CRAN 
  request.
- Add model.matrix method for clmm-objects.
- Enable evaluation of anova.clmm in separate environments - thanks to Karl Ove 
  Hufthammer for reporting and Jack Taylor for a detailed analysis and 
  suggestion for a fix.
- Allow models with an implicit intercept and only random effects in clmm().
- Fixed index in equation (7) of the clm-vignette.
- Fix import of ranef and VarCorr methods from nlme and lme4 packages

2023-11-29:
- Change NCOL usage because Kurt Hornik wants to change the behavior of 
  NCOL(NULL) in base R
